# ml-train-predict

./: README.md  predict.py  pyproject.toml  test_predict.py  train.py
artifacts/: model  pipe.pkl
